fix: I integrate header and footer to index.html and resolve conflicts

--- a/index.html
+++ b/index.html
@@ -4,13 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Los Tres Fogones Selectos || Inicio</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;600&family=Lato:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css"
+    />
     <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/header.css" />
+    <link rel="stylesheet" href="css/footer.css">
     <link rel="stylesheet" href="css/index.css" />
-  </head>
-  <body>
+    <header-los-tres-fogones-selectos></header-los-tres-fogones-selectos>
     <div class="wrapperPage">
       <div class="wraperHeaderBanner">
-        <header></header>
         <section class="banner">
           <div class="bannerContent">
             <h1>Arte en cada bocado</h1>
@@ -45,7 +57,7 @@
                   El servicio fue excelente. Me entregaron todo antes del plazo
                   y la comunicación fue muy clara durante todo el proceso.
                 </p>
-                <footer>⭐⭐⭐⭐⭐</footer>
+                <p>⭐⭐⭐⭐⭐</p>
               </article>
               <article class="opinion">
                 <img
@@ -57,7 +69,7 @@
                   Realmente quedé sorprendido con la calidad. Se nota la
                   dedicación y el profesionalismo en cada detalle.
                 </p>
-                <footer>⭐⭐⭐⭐⭐</footer>
+                <p>⭐⭐⭐⭐⭐</p>
               </article>
               <article class="opinion">
                 <img
@@ -69,7 +81,7 @@
                   Precio justo, atención rápida y trabajo impecable. Lo
                   recomiendo al 100%.
                 </p>
-                <footer>⭐⭐⭐⭐⭐</footer>
+                <p>⭐⭐⭐⭐⭐</p>
               </article>
               <article class="opinion">
                 <img
@@ -81,7 +93,7 @@
                   Muy buen trato y excelente producto final. Todo salió tal como
                   lo habíamos planificado.
                 </p>
-                <footer>⭐⭐⭐⭐⭐</footer>
+                <p>⭐⭐⭐⭐⭐</p>
               </article>
             </div>
             <button id="previousButton"></button>
@@ -89,8 +101,13 @@
           </div>
         </section>
       </main>
-      <footer></footer>
+      <footer-los-tres-fogones-selectos></footer-los-tres-fogones-selectos>
     </div>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+
+    <script src="js/header.js"></script>
+    <script src="js/footer.js"></script>
+
     <script src="js/index.js"></script>
   </body>
 </html>
