feat: I link every page of web page

--- a/pages/aboutUs.html
+++ b/pages/aboutUs.html
@@ -18,7 +18,7 @@
 
 <body>
     <header-los-tres-fogones-selectos></header-los-tres-fogones-selectos>
-<script src="/js/header.js"></script>
+<script src="../js/header.js"></script>
     <main>
 
         <h1 class="titleBig">Nuestra Historia</h1>
@@ -27,19 +27,19 @@
 
             <div class="cardwork">
             <div class="card">
-                <img src="/images/albertoQhesse.png" alt="">
+                <img src="../images/albertoQhesse.png" alt="">
             </div>
             <div class="card">
-                <img src="/images/javiAtention.png" alt="">
+                <img src="../images/javiAtention.png" alt="">
             </div>
             <div class="card">
-                <img src="/images/hectorMasterCheese.png" alt="">
+                <img src="../images/hectorMasterCheese.png" alt="">
             </div>
             <div class="card">
-                <img src="/images/mariaMermelate.png" alt="">
+                <img src="../images/mariaMermelate.png" alt="">
                 </div>
             <div class="card">
-                <img src="/images/heberCutHam.png" alt="">
+                <img src="../images/heberCutHam.png" alt="">
                 </div>
         </div>
         
@@ -71,7 +71,7 @@
 
         <div class="cardPhotos">
             <div class="card">
-                <img src="/images/albertoPhoto.png" alt="">
+                <img src="../images/albertoPhoto.png" alt="">
                 <div class="cardContent">
                     <h3>ALBERTO</h3>
                     <p>Alberto es el jefe de nuestra tienda, se centra enla experiencia del cliente y la gestion del
@@ -81,7 +81,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/Javier.png" alt="">
+                <img src="../images/Javier.png" alt="">
                 <div class="cardContent">
                     <h3>JAVIER</h3>
                     <p>Javier es nuestro increíble relaciones públicas. Su trato es inmejorable tanto con clientes como
@@ -93,7 +93,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/hectorPhoto1.png" alt="">
+                <img src="../images/hectorPhoto1.png" alt="">
                 <div class="cardContent">
                     <h3>HECTOR</h3>
                     <p>Hector es un auténtico maestro afinador de quesos,con un conocimiento profundo que abarca una
@@ -104,7 +104,7 @@
 
 
             <div class="card">
-                <img src="/images/mariaRegueiro.png" alt="">
+                <img src="../images/mariaRegueiro.png" alt="">
                 <div class="cardContent">
                     <h3>MARIA REGUEIRO</h3>
                     <p>Maria es nuestra chef, de su cabeza han salido la mayoría de las recetas que podéis ver en
@@ -115,7 +115,7 @@
             </div>
 
             <div class="card">
-                <img src="/images/heberPhoto.png" alt="">
+                <img src="../images/heberPhoto.png" alt="">
                 <div class="cardContent">
                     <h3>HEBER PARIS</h3>
                     <p>Entre sus increíbles habilidades se encuentran varios premios del Campeonato de España de
