--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 
     <script src="js/headerIndex.js"></script>
-    <script src="js/footer.js"></script>
+    <script src="js/footerIndex.js"></script>
 
     <script src="js/index.js"></script>
   </body>
